package utility;

/**
 * Интерфейс для классов, поля которых могут быть вадидными или нет.
 * @author skadibtw
 */
public interface Validatable {
	boolean validate();
}
