package ru.itmolabs.lab5.commands;

public class Add extends Command{
}
