package ru.itmolabs.lab5.commands;

public class Exit {
}
